# RCOMV

rcomv/: CMakeLists.txt  package.xml
rcomv_r1/: CMakeLists.txt  package.xml
rcomv_r1/launch/: fig8_inside_1agent.launch  fig8_inside_3agent.launch  gazebo.launch  multi_r1_trajectory_tracking.launch  r1_test.launch  r1_trajectory_tracking.launch  spawn_ugv.launch  ugv_with_InOutLin_control.launch  ugv_with_control.launch  wide.launch
rcomv_r1/models/: r1_sim (backup).gazebo  r1_sim.gazebo
rcomv_r1/msg/: CubicPath.msg  MSRPA.msg  ParametricPath.msg
rcomv_r1/src/: #traj_generator.cpp#  #wmsr_node.cpp#  .#traj_generator.cpp  .#wmsr_node.cpp  IO_control_collision.cpp  IO_control_collision.h  InputOutputLin_Controller.cpp  InputOutputLin_Controller.h  msrpa.cpp  msrpa.h  msrpa_auto_leader.cpp  path_publisher.cpp  path_wmsr_node.cpp  path_wmsr_node.h  pid_controller.cpp  pid_controller.h  traj_generator.cpp  wmsr_node.cpp  wmsr_node.h
rcomv_r1/urdf/: r1_sim.urdf (backup).xacro  r1_sim.urdf.xacro
rcomv_r1/worlds/: obstacles.world
rcomv_uav/: CMakeLists.txt  package.xml
rcomv_uav/XML generator/: SimpleLeaderWMSR_Final_3D.txt  SimpleLeaderWMSR_xMaxMin_3D.txt  XML_WSMR.m  test.launch  test_ruin_world.launch  test_world.launch
rcomv_uav/include/: .#wmsr_node.h  wmsr_node(backup).h  wmsr_node.h
rcomv_uav/launch/: 1Agent.launch  Obstacle.launch  Simple_Leader_WMSR_y1D.launch  circular_path_mav.launch  circular_path_multi_3uav_2ugv_demo.launch  spawn_mav.launch  (+7 more)
rcomv_ugv/: CMakeLists.txt  package.xml
worlds/: my_worldV1.world  simple_city.world  terrain.world
(+145 files in other folders)
