<?xml version="1.0"?>
<package>
  <name>rcomv</name>
  <version>0.0.0</version>
  <description>The package for RCOMV project</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ruilin@todo.todo">ruilin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rcomv_uav</run_depend>
  <run_depend>rcomv_ugv</run_depend>
  <run_depend>rcomv_r1</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
